# MarkGlass

./: .gitignore  CHANGELOG.md  README.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  开发任务清单.md
.github/workflows/: build.yml
src/: App.vue  env.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
