[package]
name = "markglass"
version = "1.0.1"
description = "MarkGlass - a focused Markdown viewer for Windows"
authors = ["Lee Xuetao"]
edition = "2021"

[lib]
name = "markglass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
window-vibrancy = "0.6"
